<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/info_field_style"
            android:id="@+id/info_field1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_field1"/>
        <LinearLayout
            android:id="@+id/info_field2"
            android:layout_below="@id/info_field1"
            style="@style/info_picture_layout_style">
            <TextView
                style="@style/picture_description_style"
                android:text="@string/flag"/>
            <ImageView
                android:src="@drawable/flag"
                style="@style/info_picture_style" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/info_field3"
            android:layout_below="@id/info_field2"
            style="@style/info_picture_layout_style">
            <TextView
                android:text="@string/bridge"
                style="@style/picture_description_style" />
            <ImageView
                android:src="@drawable/bridge"
                style="@style/info_picture_style" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/info_field4"
            android:layout_below="@id/info_field3"
            style="@style/info_picture_layout_style">
            <TextView
                android:text="@string/coat_of_arms"
                style="@style/picture_description_style"/>
            <ImageView
                android:src="@drawable/coat_of_arms"
                style="@style/info_picture_style" />
        </LinearLayout>

        <Button
            style="@style/button_style"
            android:id="@+id/more_info_button"
            android:layout_below="@id/info_field4"
            android:layout_centerHorizontal="true"
            android:text="@string/more_info"/>
        <Button
            style="@style/button_style"
            android:id="@+id/back_button"
            android:layout_below="@id/more_info_button"
            android:layout_centerHorizontal="true"
            android:text="@string/back"/>

    </RelativeLayout>
</ScrollView>