<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/title_text_style"
        android:text="@string/title_string" />
    <ImageView
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:src="@drawable/kudiga_tite_image"
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:paddingTop="@dimen/button_top_padding"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/main_menu_info"
            style="@style/button_style"
            android:text="@string/information" />
        <Button
            android:id="@+id/main_menu_test"
            style="@style/button_style"
            android:text="@string/test" />
    </LinearLayout>
</LinearLayout>
