<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/question1"
            style="@style/question_style"
            android:text="@string/question1"/>
        <RadioGroup
            style="@style/radio_group_style">
            <RadioButton
                style="@style/answer_radio_button_style"
                android:text="@string/answer1.1"/>
            <RadioButton
                android:id="@+id/question1_answer"
                style="@style/answer_radio_button_style"
                android:text="@string/answer1.2" />
            <RadioButton
                style="@style/answer_radio_button_style"
                android:text="@string/answer1.3"/>
        </RadioGroup>
        <View
            style="@style/devider">
        </View>
        <TextView
            android:id="@+id/question2"
            style="@style/question_style"
            android:text="@string/question2"/>
        <RadioGroup
            style="@style/radio_group_style">
            <RadioButton
                style="@style/answer_radio_button_style"
                android:text="@string/answer2.1"/>
            <RadioButton
                android:id="@+id/question2_answer"
                style="@style/answer_radio_button_style"
                android:text="@string/answer2.2" />
            <RadioButton
                android:id="@+id/best_answer"
                style="@style/answer_radio_button_style"
                android:text="@string/answer2.3"/>
        </RadioGroup>
        <View
            style="@style/devider">
        </View>
        <TextView
            android:id="@+id/question3"
            style="@style/question_style"
            android:text="@string/question3"/>
        <EditText
            android:id="@+id/question3_answer"
            android:textColor="@color/check_box_thick_color"
            style="@style/answer_radio_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer3.1"/>
        <View
            style="@style/devider">
        </View>
        <TextView
            android:id="@+id/question4"
            style="@style/question_style"
            android:text="@string/question4"/>
        <LinearLayout
            style="@style/info_picture_layout_style">
            <LinearLayout
                style="@style/check_box_nest_layout_style">
                <CheckBox
                    android:id="@+id/question4_answer1"
                    style="@style/check_box_style"/>
            </LinearLayout>
            <ImageView
                style="@style/answer_picture_layout_style"
                android:src="@drawable/flag"/>
        </LinearLayout>
        <LinearLayout
            style="@style/info_picture_layout_style">
            <LinearLayout
                style="@style/check_box_nest_layout_style">
                <CheckBox
                    android:id="@+id/question4_answer2"
                    style="@style/check_box_style"/>
            </LinearLayout>
            <ImageView
                style="@style/answer_picture_layout_style"
                android:src="@drawable/chicken"/>
        </LinearLayout>
        <LinearLayout
            style="@style/info_picture_layout_style">
            <LinearLayout
                style="@style/check_box_nest_layout_style">
                <CheckBox
                    android:id="@+id/question4_answer3"
                    style="@style/check_box_style"/>
            </LinearLayout>
            <ImageView
                style="@style/answer_picture_layout_style"
                android:src="@drawable/coat_of_arms"
                android:layout_height="200dp"/>
        </LinearLayout>
        <View
            style="@style/devider">
        </View>
        <TextView
            android:id="@+id/question5"
            style="@style/question_style"
            android:text="@string/question5"/>
        <RadioGroup
            style="@style/radio_group_style">
            <RadioButton
                style="@style/answer_radio_button_style"
                android:text="@string/answer5.1"/>
            <RadioButton
                style="@style/answer_radio_button_style"
                android:text="@string/answer5.2" />
            <RadioButton
                android:id="@+id/question5_answer"
                style="@style/answer_radio_button_style"
                android:text="@string/answer5.3"/>
        </RadioGroup>
        <View
            style="@style/devider">
        </View>
        <TextView
            android:textColor="@color/finish_text_color"
            android:textSize="@dimen/finish_text_size"
            android:gravity="center"
            android:text="@string/press_the_chicken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageButton
            android:padding="0dp"
            android:id="@+id/chicken_button"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/chicken_button_height"
            android:src="@drawable/chicken2"/>
    </LinearLayout>
</ScrollView>